Add volume control functionality.

--- a/JS_DOM_Piano/index.html
+++ b/JS_DOM_Piano/index.html
@@ -9,7 +9,12 @@
 <body>
     <main>
         <div id="bg">
-            <div id="top"></div>
+            <div id="top">
+                <div class="volume-box">
+                    <span>Volume: </span>
+                    <input type="range" id="volumeSlider" min="0" max="1" value="0.5" step="0.1">
+                </div>
+            </div>
             <div id="keys">
                 <div id="Q"><h4>Q</h4></div>
                 <div id="W"><h4>W</h4></div>
