--- a/Matrix_effect/index.html
+++ b/Matrix_effect/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p>WELCOME FELLOW HACKERS!!!</p>
+    <p>Welcome Fellow HACKERS</p>
     <script src="script.js"></script>
 </body>
 </html>
